# TR-mbed6

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
Infantry/: main.cpp
Test Bench/: main.cpp  mpu.cpp
cmake_build/NUCLEO_F446RE/develop/GCC_ARM/: .ninja_deps  .ninja_log  CMakeCache.txt  TR-mbed6.hex  cmake_install.cmake  mbed_config.cmake
src/: main.hpp
util/algorithms/: pid.hpp
util/communications/: ref_serial.cpp  ref_serial.hpp
util/communications/mpu6050ATTEMPT/: MPU6050.h
util/motor/: CANMotor.hpp  motor.hpp
util/testing/input_tester_arduino/: input_tester_arduino.ino
